Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntegerNumObjField.quorum
class Main
    integer v = Test()
    action Main
    end

    action Test() returns integer
        Number var
        var:SetValue(5.0)
        return var
    end
end